# eigen_control_toolbox

./: .gitignore  README.md
eigen_state_space_systems/: CMakeLists.txt  package.xml
eigen_state_space_systems/include/eigen_state_space_systems/: eigen_common_filters.h  eigen_controllers.h  eigen_fir_filters.h  eigen_iir_filters.h  eigen_sg_filter.h  eigen_state_space_systems.h  filtered_values.h
eigen_state_space_systems/include/eigen_state_space_systems/internal/: eigen_controllers_impl.h  eigen_fir_filters_impl.h  eigen_iir_filters_impl.h  eigen_sg_filter_impl.h  eigen_state_space_systems_impl.h  filtered_values_impl.h
eigen_state_space_systems/launch/: test_controllers.launch
eigen_state_space_systems/src/: test_filters.cpp  test_pid.cpp  test_state_space_matrix.cpp
eigen_state_space_systems/test/: filtered_values_test.cpp  filtered_values_test.launch  test_controllers.launch  test_filtered_values.cpp  test_filtered_values.launch  test_filters.cpp  test_filters.launch  test_pid.cpp  test_state_space_matrix.cpp  test_state_space_matrix.launch
